# FRDM-KW41Z

./: Cargo.toml  README.md  frdm-kw41z.cfg  memory.x  openocd_program.sh
examples/: gpio_hal_blinky.rs  gpio_hal_ledbutton.rs  gpio_nop_blinky.rs
src/: lib.rs
