[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "hardware-support",
    "embedded",
    "no-std",
]
description = "Board support crate for the NXP FRDM-KW41Z"
documentation = "https://docs.rs/frdm-kw41z"
keywords = [
    "arm",
    "cortex-m",
    "mkw41z",
]
license = "0BSD"
name = "frdm-kw41z"
repository = "https://github.com/therealproF/FRDM-KW41Z"
version = "0.1.1"

[dependencies]
cortex-m = "0.4.3"
cortex-m-rt = "0.4.0"
nb = "0.1.1"
panic-abort = "0.1.1"
static-ref = "0.2.1"
vcell = "0.1.0"
volatile-register = "0.2.0"

[dependencies.mkw41z]
features = ["rt"]
version = "0.1.2"

[dependencies.mkw41z-hal]
features = ["rt"]
version = "0.1.1"

[features]
default = ["rt"]
rt = []
[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
